--- a/index.html
+++ b/index.html
@@ -57,11 +57,20 @@
     </div>
 
     <div class="background">
-
+      <img src="img/game-cover.jpg" alt="">
     </div>
 
   </div>
-
+  <svg width="0" height="0" x="0px" y="0px">
+    <defs>
+      <clipPath id="wave" clipPathUnits="objectBoundingBox">
+        <path d="M1.5,0H1H0.5H0v0.8C0.3,0.8,0.3,1,0.5,1c0,0,0,0,0,0C0.8,1,0.8,0.8,1,0.8c0,0,0,0,0,0C1.3,0.8,1.3,1,1.5,1
+	C1.8,1,1.8,0.8,2,0.8V0H1.5z" />
+        <animateTransform attributeType="XML" attributeName="transform" from="0 0" to="-200 0" begin="0s" dur="10s"
+          repeatCount="indefinite" />
+      </clipPath>
+    </defs>
+  </svg>
 </body>
 
 </html>
