wave Translate for Chrome

--- a/index.html
+++ b/index.html
@@ -1,76 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Top Games</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Top Games</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
-    crossorigin="anonymous" />
-  <link rel="stylesheet" href="css/main.css" />
-</head>
+  <body>
+    <div class="game">
+      <div class="rank">3</div>
 
-<body>
+      <div class="front">
+        <img class="thumbnail" src="img/game-cover.jpg" alt="" />
+        <h3 class="name icon">Game name</h3>
+        <div class="stats">
+          <p class="viewers icon">539.9k</p>
+          <div class="streamers">
+            <img src="img/streamer-1.jpg" alt="" />
+            <img src="img/streamer-2.jpg" alt="" />
+            <img src="img/streamer-3.jpg" alt="" />
+          </div>
+        </div>
+      </div>
 
-  <div class="game">
-
-    <div class="rank">3</div>
-
-    <div class="front">
-      <img class="thumbnail" src="img/game-cover.jpg" alt="">
-      <h3 class="name icon">Game name</h3>
-      <div class="stats">
-        <p class="viewers icon">539.9k</p>
+      <div class="back">
+        <div class="streaming-info">
+          <p class="game-stat">559k<span>Watching</span></p>
+          <p class="game-stat">25.8k<span>Streams</span></p>
+        </div>
+        <button class="btn">See more streams</button>
         <div class="streamers">
-          <img src="img/streamer-1.jpg" alt="">
-          <img src="img/streamer-2.jpg" alt="">
-          <img src="img/streamer-3.jpg" alt="">
+          <div class="streamer">
+            <div class="icon"><img src="img/streamer-1.jpg" alt="" /></div>
+            <p class="name">Gamer1</p>
+            <p class="number">36.1k</p>
+          </div>
+          <div class="streamer">
+            <div class="icon"><img src="img/streamer-2.jpg" alt="" /></div>
+            <p class="name">Gamer 2</p>
+            <p class="number">35.1k</p>
+          </div>
+          <div class="streamer">
+            <div class="icon"><img src="img/streamer-3.jpg" alt="" /></div>
+            <p class="name">Gamer 3</p>
+            <p class="number">34.1k</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="back">
-      <div class="streaming-info">
-        <p class="game-stat">559k<span>Watching</span></p>
-        <p class="game-stat">25.8k<span>Streams</span></p>
-      </div>
-      <button class="btn">See more streams</button>
-      <div class="streamers">
-        <div class="streamer">
-          <div class="icon"><img src="img/streamer-1.jpg" alt=""></div>
-          <p class="name">Gamer1</p>
-          <p class="number">36.1k</p>
-        </div>
-        <div class="streamer">
-          <div class="icon"><img src="img/streamer-2.jpg" alt=""></div>
-          <p class="name">Gamer 2</p>
-          <p class="number">35.1k</p>
-        </div>
-        <div class="streamer">
-          <div class="icon"><img src="img/streamer-3.jpg" alt=""></div>
-          <p class="name">Gamer 3</p>
-          <p class="number">34.1k</p>
-        </div>
+      <div class="background">
+        <img src="img/game-cover.jpg" alt="" />
       </div>
     </div>
-
-    <div class="background">
-      <img src="img/game-cover.jpg" alt="">
-    </div>
-
-  </div>
-  <svg width="0" height="0" x="0px" y="0px">
-    <defs>
-      <clipPath id="wave" clipPathUnits="objectBoundingBox">
-        <path d="M1.5,0H1H0.5H0v0.8C0.3,0.8,0.3,1,0.5,1c0,0,0,0,0,0C0.8,1,0.8,0.8,1,0.8c0,0,0,0,0,0C1.3,0.8,1.3,1,1.5,1
-	C1.8,1,1.8,0.8,2,0.8V0H1.5z" />
-        <animateTransform attributeType="XML" attributeName="transform" from="0 0" to="-200 0" begin="0s" dur="10s"
-          repeatCount="indefinite" />
-      </clipPath>
-    </defs>
-  </svg>
-</body>
-
+    <svg width="0" height="0" x="0px" y="0px">
+      <defs>
+        <clipPath id="wave" clipPathUnits="objectBoundingBox">
+          <path
+            d="M1.5,0H1H0.5H0v0.8C0.3,0.8,0.3,1,0.5,1c0,0,0,0,0,0C0.8,1,0.8,0.8,1,0.8c0,0,0,0,0,0C1.3,0.8,1.3,1,1.5,1
+	C1.8,1,1.8,0.8,2,0.8V0H1.5z"
+          />
+          <animateTransform
+            attributeType="XML"
+            attributeName="transform"
+            type="translate"
+            from="0 0"
+            to="-200 0"
+            begin="0s"
+            dur="10s"
+            repeatCount="indefinite"
+          />
+        </clipPath>
+      </defs>
+    </svg>
+  </body>
 </html>
